--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,12 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:replace="android:usesCleartextTraffic,android:theme">
-        <activity android:name=".activities.Auth2Activity"></activity>
+        <activity
+            android:name=".activities.CardDetail"
+            android:label="@string/title_activity_card_detail"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".activities.AccountOpeningActivity" />
+        <activity android:name=".activities.Auth2Activity" />
 
         <meta-data
             android:name="preloaded_fonts"
