--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,8 +29,19 @@
         <activity android:name=".activities.Auth2Activity" />
 
         <meta-data
+            android:name="com.google.firebase.messaging.default_notification_icon"
+            android:resource="@drawable/emaishapay_logo_icon" />
+
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_color"
+            android:resource="@color/colorAccent" />
+
+        <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
+
+
+
 
         <activity
             android:name=".activities.SplashScreen"
@@ -65,6 +76,22 @@
         <activity
             android:name=".activities.Login"
             android:label="Sign In" />
+
+        <!-- Firebase Notifications -->
+
+        <service
+            android:name=".messaging.FirebaseMessageReceiver"
+            android:permission="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
     </application>
+
+
+
+
 
 </manifest>
