--- a/app/build.gradle
+++ b/app/build.gradle
@@ -114,4 +114,5 @@ dependencies {
     implementation 'com.google.android.gms:play-services-places:17.0.0'
     implementation 'com.google.android.libraries.places:places:2.3.0'
     implementation 'com.crystal:crystalrangeseekbar:1.1.1'
+    implementation 'hyogeun.github.com.colorratingbar:ColorRatingBar:1.0.1'
 }
