--- a/app/build.gradle
+++ b/app/build.gradle
@@ -124,4 +124,6 @@ dependencies {
     implementation 'com.ajts.androidmads.SQLite2Excel:library:1.0.4'
     implementation 'com.github.hedzr:android-file-chooser:v1.2.0-final'
     implementation 'com.github.GrenderG:Toasty:1.4.2'
+    implementation 'com.itextpdf:itextg:5.5.10'
+    implementation 'com.github.barteksc:android-pdf-viewer:3.1.0-beta.1'
 }
