--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
             android:name=".activities.WalletBuySellActivity"
             android:label="@string/title_activity_wallet_buy_sell"></activity>
         <activity
-            android:name=".activities.CardDetail"
+            android:name=".fragments.CardDetail"
             android:label="@string/title_activity_card_detail"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".activities.AccountOpeningActivity" />
