--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
             android:name=".activities.WalletBuySellActivity"
             android:label="@string/title_activity_wallet_buy_sell"></activity>
 
-        <activity android:name=".activities.Auth2Activity" />
+        <activity android:name=".activities.ConfirmActivity" />
 
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
