--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
         tools:replace="android:usesCleartextTraffic,android:theme">
         <activity
             android:name=".activities.WalletBuySellActivity"
-            android:label="@string/title_activity_wallet_buy_sell"></activity>
+            android:label="@string/title_activity_wallet_buy_sell"
+            android:windowSoftInputMode="adjustPan"/>
 
         <activity android:name=".activities.ConfirmActivity" />
 
@@ -69,7 +70,8 @@
             android:label="Sign UP" />
 
         <activity android:name=".activities.ShopActivity"
-            android:label="Shop"/>
+            android:label="Shop"
+            android:windowSoftInputMode="adjustPan"/>
 
 
         <activity
