--- a/app/build.gradle
+++ b/app/build.gradle
@@ -123,5 +123,6 @@ dependencies {
     implementation 'commons-codec:commons-codec:1.8'
     implementation 'com.github.GrenderG:Toasty:1.4.2'
 
+    implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:2.0.1'
     implementation 'net.yslibrary.keyboardvisibilityevent:keyboardvisibilityevent:2.1.0'
 }
