added Headers through API client Interceptor

--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,5 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
+#When the plugin detects that you're using an API that's no longer supported, it can now provide more-detailed informatio
+android.debug.obsoleteApi=true
