--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
-        maven {
-            name 'Google'
-            url 'https://maven.fabric.io/public'
-            mavenCentral()
-        }
         google()
         jcenter()
 
@@ -16,7 +11,8 @@ buildscript {
         classpath 'com.google.gms:google-services:4.3.5'
 
         // Add dependency
-        classpath 'io.fabric.tools:gradle:1.31.0'  // Crashlytics plugin
+
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.5.2' // Crashlytics plugin
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
