--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:replace="android:usesCleartextTraffic,android:theme">
-
+        <activity android:name=".activities.AuthActivity"></activity>
 
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
@@ -31,18 +31,15 @@
             android:resource="@color/colorAccent" />
         <meta-data
             android:name="preloaded_fonts"
-            android:resource="@array/preloaded_fonts" />
-        <!-- Google MAP API key -->
+            android:resource="@array/preloaded_fonts" /> <!-- Google MAP API key -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/maps_api_key" />
-
 
         <activity
             android:name=".activities.WalletBuySellActivity"
             android:label="@string/title_activity_wallet_buy_sell"
             android:windowSoftInputMode="adjustPan" />
-
         <activity
             android:name=".activities.SplashScreen"
             android:exported="true"
@@ -56,7 +53,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".activities.WalletHomeActivity"
             android:label="@string/app_name"
@@ -68,13 +64,10 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".activities.ShopActivity"
             android:label="Shop"
-            android:windowSoftInputMode="adjustPan" />
-
-        <!-- Firebase Notifications -->
+            android:windowSoftInputMode="adjustPan" /> <!-- Firebase Notifications -->
         <service
             android:name=".messaging.FirebaseMessageReceiver"
             android:permission="false">
@@ -83,7 +76,6 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-
     </application>
 
 </manifest>
