--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,15 +35,13 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/maps_api_key" />
 
-        <activity android:name=".activities.AuthActivity"></activity>
         <activity
             android:name=".activities.WalletBuySellActivity"
             android:label="@string/title_activity_wallet_buy_sell"
             android:windowSoftInputMode="adjustPan" />
+
         <activity
-            android:name=".activities.SplashScreen"
-            android:exported="true"
-            android:launchMode="singleTask"
+            android:name=".activities.AuthActivity"
             android:screenOrientation="portrait"
             android:theme="@style/MySplashScreen"
             tools:ignore="LockedOrientationActivity">
@@ -53,6 +51,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".activities.WalletHomeActivity"
             android:label="@string/app_name"
@@ -64,15 +63,12 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".activities.ShopActivity"
             android:label="Shop"
             android:windowSoftInputMode="adjustPan" />
-        <activity
-            android:name=".activities.ConfirmActivity"
-            android:label="ConfirmActivity" />
 
-        <!-- Firebase Notifications -->
         <service
             android:name=".messaging.FirebaseMessageReceiver"
             android:permission="false">
