--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,14 +32,7 @@ android {
         resValue "string", "maps_api_key", (secureProps.getProperty("MAPS_API_KEY") ?: "")
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
-        javaCompileOptions {
-            annotationProcessorOptions {
-                arguments += [
-                        "room.schemaLocation":"$projectDir/schemas".toString(),
-                        "room.incremental":"true",
-                        "room.expandProjection":"true"]
-            }
-        }
+
 
     }
 
@@ -62,9 +55,9 @@ android {
 
 dependencies {
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-savedstate:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-savedstate:2.3.1'
     // Room components
     def roomVersion ="2.2.6"
     implementation "androidx.room:room-runtime:$roomVersion"
@@ -72,49 +65,49 @@ dependencies {
     androidTestImplementation "androidx.room:room-testing:$roomVersion"
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.preference:preference:1.0.0'
+    implementation 'androidx.preference:preference:1.1.1'
     implementation 'androidx.legacy:legacy-preference-v14:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    def nav_version = "2.3.4"
+    def nav_version = '2.3.5'
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
-    testImplementation 'junit:junit:4.+'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     implementation 'com.google.code.gson:gson:2.8.6'
     //Retrofit dependencies for http client
-    implementation 'com.squareup.retrofit2:retrofit:2.6.2'
-    implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2'
 
     implementation 'com.nineoldandroids:library:2.4.0'
-    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.squareup.picasso:picasso:2.71828'
     //No Internet available
     implementation 'am.appwise.components:NoInternetDialog:1.1.3'
 
-    implementation 'com.google.firebase:firebase-auth:19.3.1'
-    implementation 'com.google.android.gms:play-services-auth:17.0.0'
-    implementation 'com.google.firebase:firebase-core:17.0.1'
-    implementation 'com.google.firebase:firebase-messaging:19.0.1'
+    implementation 'com.google.firebase:firebase-auth:20.0.4'
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
+    implementation 'com.google.firebase:firebase-core:18.0.3'
+    implementation 'com.google.firebase:firebase-messaging:21.1.0'
     // (Recommended) Add Analytics
-    implementation 'com.google.firebase:firebase-analytics:17.0.1'
+    implementation 'com.google.firebase:firebase-analytics:18.0.3'
 
     implementation 'com.kofigyan.stateprogressbar:stateprogressbar:1.0.0'
-    implementation 'androidx.preference:preference:1.0.0'
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'androidx.preference:preference:1.1.1'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
     //flutterwave
-    implementation 'com.github.Flutterwave.rave-android:rave_presentation:2.1.10'
-    implementation 'com.github.Flutterwave.rave-android:rave_utils:2.1.10'
+    implementation 'com.github.Flutterwave.rave-android:rave_presentation:2.1.31'
+    implementation 'com.github.Flutterwave.rave-android:rave_utils:2.1.31'
     // Java Navigation Component
     implementation "androidx.navigation:navigation-fragment:$nav_version"
     implementation "androidx.navigation:navigation-ui:$nav_version"
     implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
 
-    implementation 'com.venmo.android.pin:library:0.2@aar'
+    //implementation 'com.venmo.android.pin:library:1.2.0@aar'
     // Material Design
-    implementation 'com.google.android.material:material:1.3.0-alpha03'
+    implementation 'com.google.android.material:material:1.4.0-alpha02'
     implementation 'com.github.maayyaannkk:ImagePicker:1.0.8'
 
     implementation 'com.daimajia.slider:library:1.1.5@aar'
@@ -122,19 +115,21 @@ dependencies {
     implementation 'hyogeun.github.com.colorratingbar:ColorRatingBar:1.0.1'
     implementation 'com.braintreepayments:card-form:3.+'
     implementation 'com.braintreepayments.api:drop-in:3.+'
-    implementation 'com.braintreepayments.api:braintree:2.+'
+    //implementation 'com.braintreepayments:card-form:5.1.1'
+    //implementation 'com.braintreepayments.api:drop-in:5.2.0'
+    //implementation 'com.braintreepayments.api:braintree:3.17.0'
 
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
     //location and places
     implementation 'com.google.android.gms:play-services-gcm:17.0.0'
-    implementation 'com.google.android.gms:play-services-auth:17.0.0'
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
-    implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
     implementation 'com.google.android.gms:play-services-places:17.0.0'
-    implementation 'com.google.android.libraries.places:places:2.3.0'
+    implementation 'com.google.android.libraries.places:places:2.4.0'
     implementation 'com.crystal:crystalrangeseekbar:1.1.1'
     implementation 'hyogeun.github.com.colorratingbar:ColorRatingBar:1.0.1'
-    implementation 'commons-codec:commons-codec:1.8'
+    implementation 'commons-codec:commons-codec:20041127.091804'
     implementation 'com.github.GrenderG:Toasty:1.4.2'
 
     implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:2.0.1'
