--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
 
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.2"
+        classpath 'com.android.tools.build:gradle:4.1.1'
 
         classpath 'com.google.gms:google-services:4.3.5'
 
@@ -20,10 +20,8 @@ buildscript {
 
 allprojects {
     repositories {
-
-        maven { url 'https://jitpack.io' }
-
         google()
+        maven { url "https://www.jitpack.io" }
         jcenter()
     }
 }
