--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,7 +83,6 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2'
 
     implementation 'com.nineoldandroids:library:2.4.0'
-    implementation 'com.squareup.picasso:picasso:2.71828'
     //No Internet available
     implementation 'am.appwise.components:NoInternetDialog:1.1.3'
 
@@ -110,7 +109,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0-alpha02'
     implementation 'com.github.maayyaannkk:ImagePicker:1.0.8'
 
-    implementation 'com.daimajia.slider:library:1.1.5@aar'
+    ///implementation 'com.daimajia.slider:library:1.1.5@aar'
+    implementation "com.github.firdausmaulan:GlideSlider:1.5.1"
 
     implementation 'hyogeun.github.com.colorratingbar:ColorRatingBar:1.0.1'
     implementation 'com.braintreepayments:card-form:3.+'
