--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,5 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
-apply plugin: 'com.google.firebase.crashlytics'
 
 def apikeyPropertiesFile = rootProject.file("apikey.properties")
 def apikeyProperties = new Properties()
@@ -86,12 +85,15 @@ dependencies {
     //No Internet available
     implementation 'am.appwise.components:NoInternetDialog:1.1.3'
 
-    implementation 'com.google.firebase:firebase-auth:20.0.4'
+    // Import the BoM for the Firebase platform
+    // When using the BoM, you don't specify versions in Firebase library dependencies
+    implementation platform('com.google.firebase:firebase-bom:27.1.0')
+    implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.firebase:firebase-messaging'
+    implementation 'com.google.firebase:firebase-analytics'
+
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
-    implementation 'com.google.firebase:firebase-core:18.0.3'
-    implementation 'com.google.firebase:firebase-messaging:21.1.0'
-    // (Recommended) Add Analytics
-    implementation 'com.google.firebase:firebase-analytics:18.0.3'
+    implementation 'com.google.android.gms:play-services-auth-api-phone:17.5.0'
 
     implementation 'com.kofigyan.stateprogressbar:stateprogressbar:1.0.0'
     implementation 'androidx.preference:preference:1.1.1'
