--- a/app/build.gradle
+++ b/app/build.gradle
@@ -137,4 +137,6 @@ dependencies {
     implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:2.0.1'
     implementation 'net.yslibrary.keyboardvisibilityevent:keyboardvisibilityevent:2.1.0'
 
+    implementation 'androidmads.library.qrgenearator:QRGenearator:1.0.3'
+
 }
