added scan and pay implementation

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -139,4 +139,6 @@ dependencies {
 
     implementation 'androidmads.library.qrgenearator:QRGenearator:1.0.3'
 
+    implementation ('eu.livotov.labs.android:CAMView:2.0.1@aar') {transitive=true}
+
 }
