--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -74,12 +74,14 @@
             android:windowSoftInputMode="adjustPan" />
 
         <service
-            android:name=".messaging.FirebaseMessageReceiver"
+            android:name=".services.FirebaseMessageReceiver"
             android:permission="false">
             <intent-filter>
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
+        </service>
+        <service android:enabled="true" android:name=".services.SyncService">
         </service>
     </application>
 
