--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
-        android:screenOrientation="sensorPortrait"
+        android:screenOrientation="portrait"
         tools:replace="android:usesCleartextTraffic,android:theme">
 
         <meta-data
@@ -43,10 +43,13 @@
         <activity
             android:name=".activities.WalletBuySellActivity"
             android:label="@string/title_activity_wallet_buy_sell"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
 
         <activity
             android:name=".activities.AuthActivity"
+            android:configChanges="orientation"
             android:screenOrientation="portrait"
             android:theme="@style/MySplashScreen">
             <intent-filter>
@@ -60,6 +63,8 @@
             android:name=".activities.WalletHomeActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -71,6 +76,8 @@
         <activity
             android:name=".activities.ShopActivity"
             android:label="Shop"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
 
         <service
