--- a/app/build.gradle
+++ b/app/build.gradle
@@ -115,8 +115,8 @@ dependencies {
     implementation "com.github.firdausmaulan:GlideSlider:1.5.1"
 
     implementation 'hyogeun.github.com.colorratingbar:ColorRatingBar:1.0.1'
-    implementation 'com.braintreepayments:card-form:3.+'
-    implementation 'com.braintreepayments.api:drop-in:3.+'
+    implementation 'com.braintreepayments:card-form:5.1.0'
+    implementation 'com.braintreepayments.api:drop-in:5.2.0'
 //    implementation 'com.braintreepayments:card-form:5.1.1'
     //implementation 'com.braintreepayments.api:drop-in:5.2.0'
     //implementation 'com.braintreepayments.api:braintree:3.17.0'
