--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,8 +17,6 @@ android {
         versionCode 1
         versionName "1.0"
 
-        multiDexEnabled true
-
         buildConfigField("String", "PUBLIC_KEY", apikeyProperties['PUBLIC_KEY'])
         buildConfigField("String", "ENCRYPTION_KEY", apikeyProperties['ENCRYPTION_KEY'])
         buildConfigField("String", "SECRET_KEY", apikeyProperties['SECRET_KEY'])
@@ -53,6 +51,7 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
