--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,16 @@ allprojects {
             }
         }
     }
+//    gradle.projectsEvaluated {
+//        tasks.withType(JavaCompile) {
+//            options.compilerArgs << "-Xlint:deprecation"
+//        }
+//    }
+//    gradle.projectsEvaluated {
+//        tasks.withType(JavaCompile) {
+//            options.compilerArgs << "-Xlint:unchecked"
+//        }
+//    }
 }
 
 task clean(type: Delete) {
