--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,14 +7,15 @@ def apikeyProperties = new Properties()
 apikeyProperties.load(new FileInputStream(apikeyPropertiesFile))
 
 android {
-//    signingConfigs {
-//        upload_keystore {
-//            storeFile file('C:\\Users\\hp\\Documents\\upload_keystore.jks')
-//            keyAlias 'TETRAGRAMATON'
-//            storePassword '#TETRAGRAMATON1900e'
-//            keyPassword '#STAR@DAVID1492'
-//        }
-//    }
+    signingConfigs {
+        upload_keystore {
+            storeFile file('C:\\Users\\hp\\Documents\\upload_keystore.jks')
+            keyAlias 'TETRAGRAMATON'
+            storePassword '#TETRAGRAMATON1900e'
+            keyPassword '#STAR@DAVID1492'
+        }
+    }
+
     compileSdkVersion 30
     compileSdkVersion 30
     buildToolsVersion "30.0.2"
@@ -23,7 +24,7 @@ android {
         applicationId "com.cabral.emaishapay"
         minSdkVersion 21
         targetSdkVersion 30
-        versionCode 7
+        versionCode 8
         versionName "1.0.0"
 
         buildConfigField("String", "PUBLIC_KEY", apikeyProperties['PUBLIC_KEY'])
@@ -37,9 +38,6 @@ android {
         }
         resValue "string", "maps_api_key", (secureProps.getProperty("MAPS_API_KEY") ?: "")
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        //resConfigs ''
-
-
 
     }
     lintOptions {
@@ -53,7 +51,7 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-            //signingConfig signingConfigs.upload_keystore
+            signingConfig signingConfigs.upload_keystore
         }
     }
 
