--- a/app/build.gradle
+++ b/app/build.gradle
@@ -113,8 +113,9 @@ dependencies {
     implementation 'androidx.preference:preference:1.1.1'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     //flutterwave
-    implementation 'com.github.Flutterwave.rave-android:rave_presentation:2.1.34'
-    implementation 'com.github.Flutterwave.rave-android:rave_utils:2.1.34'
+    implementation 'com.github.flutterwave.rave-android:rave_android:2.1.36'
+    implementation 'com.github.Flutterwave.rave-android:rave_presentation:2.1.36'
+    implementation 'com.github.Flutterwave.rave-android:rave_utils:2.1.36'
     // Java Navigation Component
     implementation "androidx.navigation:navigation-fragment:$nav_version"
     implementation "androidx.navigation:navigation-ui:$nav_version"
