--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-savedstate:2.3.1'
     // Room components
     def roomVersion = '2.3.0'
+    def pagingVersion = '3.0.0'
     implementation "androidx.room:room-runtime:$roomVersion"
     annotationProcessor "androidx.room:room-compiler:$roomVersion"
     androidTestImplementation "androidx.room:room-testing:$roomVersion"
@@ -119,7 +120,7 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment:$nav_version"
     implementation "androidx.navigation:navigation-ui:$nav_version"
     implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
-
+    implementation "androidx.paging:paging-runtime-ktx:$pagingVersion"
     //implementation 'com.venmo.android.pin:library:1.2.0@aar'
     // Material Design
     implementation 'com.google.android.material:material:1.4.0-alpha02'
