--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,9 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <!--Permission for camera-->
-    <uses-permission android:name="android.permission.CAMERA" />
-    <!--Permission to vibrate-->
-    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.INTERNET" /> <!-- Permission for camera -->
+    <uses-permission android:name="android.permission.CAMERA" /> <!-- Permission to vibrate -->
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:name=".app.EmaishaPayApp"
@@ -21,10 +19,11 @@
         android:icon="@drawable/new_logo"
         android:label="@string/app_name"
         android:roundIcon="@drawable/new_logo"
+        android:screenOrientation="portrait"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:screenOrientation="portrait"
         tools:replace="android:theme">
+        <activity android:name=".activities.MerchantShopActivity"></activity>
 
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
@@ -41,11 +40,10 @@
 
         <activity
             android:name=".activities.WalletBuySellActivity"
-            android:label="@string/title_activity_wallet_buy_sell"
             android:configChanges="orientation"
+            android:label="@string/title_activity_wallet_buy_sell"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
-
         <activity
             android:name=".activities.AuthActivity"
             android:configChanges="orientation"
@@ -57,13 +55,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".activities.WalletHomeActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"
             android:configChanges="orientation"
+            android:label="@string/app_name"
             android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -71,11 +68,10 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".activities.ShopActivity"
-            android:label="Shop"
             android:configChanges="orientation"
+            android:label="Shop"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
 
@@ -87,8 +83,9 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-        <service android:enabled="true" android:name=".services.SyncService">
-        </service>
+        <service
+            android:name=".services.SyncService"
+            android:enabled="true"></service>
     </application>
 
 </manifest>
