--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,7 @@ dependencies {
     // Room components
     def roomVersion = '2.3.0'
     def pagingVersion = '3.0.0'
+    def coroutines = '1.4.3'
     implementation "androidx.room:room-runtime:$roomVersion"
     annotationProcessor "androidx.room:room-compiler:$roomVersion"
     androidTestImplementation "androidx.room:room-testing:$roomVersion"
@@ -123,13 +124,14 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment:$nav_version"
     implementation "androidx.navigation:navigation-ui:$nav_version"
     implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
+
     implementation "androidx.paging:paging-runtime-ktx:$pagingVersion"
-    //implementation 'com.venmo.android.pin:library:1.2.0@aar'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines"
+
     // Material Design
     implementation 'com.google.android.material:material:1.4.0-alpha02'
     implementation 'com.github.maayyaannkk:ImagePicker:1.0.8'
-
-    ///implementation 'com.daimajia.slider:library:1.1.5@aar'
     implementation "com.github.firdausmaulan:GlideSlider:1.5.1"
 
     implementation 'hyogeun.github.com.colorratingbar:ColorRatingBar:1.0.1'
