--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,4 @@ android.enableJetifier=true
 android.useAndroidX=true
 org.gradle.jvmargs=-Xmx1536m -XX:+UseParallelGC
 https.protocols=TLSv1.2,TLSv1.3
+kapt.incremental.apt=false
